Fixed CSS overlapping sections on style.css

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 .main-header {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .content {
@@ -64,6 +64,7 @@ body {
 
 .profile-component {
   padding-bottom: 5rem;
+  margin-top: 9rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -112,11 +113,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 7rem;
+  padding-top: 18rem;
 }
 
 .scroll .box {
-  margin-top: 4rem;
+  margin-top: 5rem;
 
 }
 .scroll > * {
@@ -169,7 +170,7 @@ body {
 
 /* About */
 .about-section {
-  height: 100vh;
+  min-height: 75vh;
 }
 
 .about-content-flex-container {
@@ -254,7 +255,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: aqua;
-  height: 20rem;
+  min-height: 20rem;
 }
 .project-btn-container {
   display: flex;
